--- a/src/pages/profile-page/profile-page.html
+++ b/src/pages/profile-page/profile-page.html
@@ -20,13 +20,13 @@
                 <div class="user">
                     <div margin-top class="photos" *ngIf="user._attachments">
                         <div class="profilePhoto logoRounded" *ngFor="let attachment of user._attachments | keys; index as i">
-                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}/users_socios/{{user._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
+                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.user.usersSocios}}/{{user._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
                             <div class="editarPhoto" *ngIf="editandoPerfil">
                                 <ion-icon name="md-camera"></ion-icon>
                             </div>
                         </div>
                         <div class="ferreteriaPhoto logoRounded sinShadow" *ngIf="logoFerreteria">
-                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}/ferreterias/{{user.id_ferreteria}}/{{logoFerreteria}}"></lazy-img>
+                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.ferreterias}}/{{user.id_ferreteria}}/{{logoFerreteria}}"></lazy-img>
                         </div>
                     </div>
                     <div class="details">
