--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -6,7 +6,7 @@
     	</button>
     </ion-navbar>
 </ion-header>
-<ion-content class="contentInterior has-footer">
+<ion-content class="contentInterior has-footer" no-bounce>
 	<ion-grid>
 		<ion-row>
 			<ion-col col-12>
