--- a/src/pages/informacion-comercial/informacion-comercial.html
+++ b/src/pages/informacion-comercial/informacion-comercial.html
@@ -45,7 +45,7 @@
                                     <ion-col col-5 col-sm-5 col-md-4 col-lg-4 col-xl-3 align-self-center>
                                         <div class="imagenProducto text-center center" *ngIf="producto.doc._attachments">
                                             <div *ngFor="let attachment of producto.doc._attachments | keys; index as i">
-                                                <lazy-img inputSrc="{{cfg.apiUrl}}/productos_top/{{producto.doc._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
+                                                <lazy-img inputSrc="{{cfg.apiUrl}}/productos/{{producto.doc._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
                                             </div>
                                         </div>
                                     </ion-col>
